[package]
name = "blood_pressure_tracker"
version = "0.1.0"
edition = "2024"
description = "Simple command line app to track blood pressure measurements"

[dependencies]
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
