[package]
name = "blood_pressure_tracker"
version = "0.1.0"
edition = "2024"
description = "Simple command line app to track blood pressure measurements"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4"
polyfit = "0.11.0"
pretty-simple-display = "0.1.0"
regex = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
